# University

./: .gitignore  .gitmodules
AI System/block 1/lab1/part1/: README.md
AI System/block 1/lab1/part2/: README.md  ontology.ttl
AI System/block 1/lab2/: inputs.txt
AI System/block 2/lab3/: linear_regression.py  main.py  utility.py
AI System/block 2/lab4/: utility.py
Autumn/AI System/block 1/lab2/: README.md
Autumn/AI System/block 1/report/: module1-report.tex
Autumn/AI System/block 2/lab3/: README.md
Autumn/EmbeddedSystems/mc1/assignment-1-elf64-loader/: CMakeLists.txt
Autumn/Inf Sys/Coursework/Stage 1/: Требования.docx
Autumn/Inf Sys/JmeterTests/: HTTP Request.jmx  userData.csv
Autumn/Inf Sys/lab1/: pom.xml
Autumn/Modeling/УИР2/: Отчет.docx
Autumn/Modeling/УИР3/: base_model.gps
Autumn/Modeling/УИР3-re/: trace_lab_1.txt
Autumn/Modeling/УИР3/3.2.2 Таблица 2/: task_1260.gpr  task_60.gpr  (+1 more)
Autumn/OS/lab1-custom/: QUESTIONS.md  README.md
Autumn/OS/lab2_iobench_cache/: CMakeLists.txt
Embdedd Systems/mc3/.metadata/: .log4j2.xml  version.ini
Inf Sys/Coursework/Stage 1/: Usecase-diagram.drawio  ~$ебования.docx  Требования.docx
Inf Sys/Coursework/Stage 2/: scripts.sql  tables.sql
Inf Sys/JmeterTests/: test 2.csv
Inf Sys/hashTest/: pom.xml
Inf Sys/lab1/: Notes.md  README.md  TODO.md  pom.xml
Inf Sys/lab1/sql_scripts/: tables.sql
Modeling/УИР2/: Отчет.docx  УИР2.docx
Modeling/УИР3/: Values_from_lab_1.txt  backup.txt  base_model.txt  data.txt  original.txt  report.gpr  smo GGKE.gps  Отчет — рещерв.docx  Отчет.docx  УИР3.rar
Modeling/УИР3/3.2.2 Таблица 2/: task_160.gpr  task_17260.gpr  task_2260.gpr  task_37260.gpr  task_7260.gpr
OS/lab1/: CMakeLists.txt  README.md  main.cpp
OS/lab1-1/.devcontainer/: devcontainer.bash
OS/lab1-benchmarks/: CMakeLists.txt  cpu.cpp  memory.cpp
OS/lab1-custom/: CMakeLists.txt  QUESTIONS.md
OS/lab1-custom/cmake/: IncludeGtest.cmake
OS/lab1-custom/src/: in_out_test.cpp  shell.cpp
OS/lab1-custom/src/benchmarks/: cpu_benchmark.cpp  io_benchmark.cpp
OS/lab1-custom/src/tests/: cpu_benchmark_test.cpp
OS/lab1-custom/src/utility/: shell_styles.cpp
OS/lab1/source/: CMakeLists.txt
OS/lab2/: CMakeLists.txt  cache_utility.cpp  cache_utility.h  example_usage.cpp  library.cpp  library.h  main.cpp
OS/lab2_lib/: library.cpp  library.h
Spring/CompNet/HW1/: report.odt
Spring/CompNet/lab1/: .~lock.report.odt#  README.md  base.net  part2.net  part3.net  report.odt
Spring/CompNet/lab2/: 1-концентратор.net  2-коммутатор.net  3-смешанная.net  report.odt
Spring/CompNet/lab3/: 1-маршрутизатор.net  2-маршрутизатора.net  3-маршрутизатора-DHCP.net  3-маршрутизатора-RIP.net  3-маршрутизатора.net  report.docx
Spring/Compilers/hw1/: third_graph.dot  third_graph_test.py  Отчёт.docx
Spring/Compilers/hw2/: dka.dot  min-dka.dot  nka.dot  validator.py  отчёт.docx
Spring/Compilers/hw3/: analyzer.py
Spring/Compilers/hw4/: отчёт.docx
Spring/CryptographicsMethods/Task2/: main.py
Spring/CryptographicsMethods/Task3/: rijndael.py
Spring/CryptographicsMethods/Task4-1/: main.py
Spring/DDSS/lab1/: report.odt  task.txt
Spring/IOSystems/Sem2/: text.md
Spring/IOSystems/Stage_1/: kernel.c  report.docx
Spring/IOSystems/Stage_2/: Makefile  driver.c  report.docx
Spring/IOSystems/Stage_3/: another_debug.sal  debug.sal  pressure.sal  temperature_data.sal
Spring/RSHD/lab1/: lab1.sql  lab1v2.sql  lab1v3.sql  rescript.sql  script.sql  test.sql  test_table.sql  Сдача.txt
Spring/RSHD/lab2/: process.md
Spring/TPO/lab1/: README.MD  pom.xml
Весна/CompNet/lab1/: stage2.net  stage3.net
Весна/Compilers/hw1/: finite_state_machine  graph.py  third_graph.dot  third_graph_test.py
Весна/Compilers/Домашнее задание №1/: third_graph.dot  third_graph_test.py  Диаграмма без названия.drawio  Отчёт.docx
Весна/TPO/lab1/: pom.xml
Осень/Inf Sys/JmeterTests/: test.csv
Осень/Inf Sys/lab1/: Notes.md  README.md
Осень/Modeling/: lab1.xlsx
Осень/Modeling/УИР3/: code.txt  task_3.3.2.gps  ~$Отчет.docx
Осень/Modeling/УИР3-re/: base_model.gps  data.txt  Книга1.xlsx
Осень/OS/lab1-custom/src/tests/: CMakeLists.txt
Осень/OS/lab2_iobench_cache/: main.cpp
Осень/OS/lab2_lib/: CMakeLists.txt
(+372 files in other folders)
